# amethyst

./: .travis.yml  AUTHORS.md  Cargo.toml
amethyst/: Cargo.toml
amethyst/src/: lib.rs
config/: Cargo.toml
config/examples/: main.rs
context/: Cargo.toml
context/src/: asset_manager.rs  renderer.rs
ecs/: Cargo.toml
engine/: Cargo.toml
engine/src/: app.rs  config.rs  lib.rs  state.rs
examples/: Cargo.toml
examples/pong/: main.rs
examples/renderable/: main.rs
processors/: Cargo.toml
processors/src/: lib.rs
renderer/: Cargo.toml
src/context/src/: asset_manager.rs
src/processors/: rendering.rs
