[package]
name = "amethyst"
version = "0.1.1"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Entity component system (ECS) library"
keywords = ["entity", "component", "system", "game", "amethyst"]

documentation = "https://www.amethyst.rs/doc/amethyst/"
homepage = "https://www.amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

license = "MIT"

[dependencies.amethyst_config]
path = "../config/"
version = "0.1.0"

[dependencies.amethyst_context]
path = "../context/"
version = "0.1.0"

[dependencies.amethyst_ecs]
path = "../ecs/"
version = "0.1.1"

[dependencies.amethyst_engine]
path = "../engine/"
version = "0.1.0"

[dependencies.amethyst_processors]
path = "../processors/"
version = "0.1.0"

[dependencies.amethyst_renderer]
path = "../renderer/"
version = "0.3.1"
