[package]
name = "amethyst_processors"
version = "0.1.0"
workspace = ".."

[dependencies]
cgmath="0.11"

[dependencies.amethyst_config]
path = "../config/"
version = "0.1.0"

[dependencies.amethyst_context]
path = "../context/"
version = "0.1.0"

[dependencies.amethyst_ecs]
path = "../ecs/"
version = "0.1.1"

[dependencies.amethyst_renderer]
path = "../renderer/"
version = "0.3.1"
